--- a/src/componenets/header/header.css
+++ b/src/componenets/header/header.css
@@ -3,6 +3,7 @@
     color: white;
     justify-content: center;
     display: flex;
+    z-index:1
 }
 .headerContainer{
     width: 100%;
@@ -10,6 +11,9 @@
     margin:2rem 0 5rem 0;
     margin-bottom: 5rem;
     position: relative;
+}
+.headerContainer.listmode{
+    margin:2rem 0 2rem 0;
 }
 .headerlist{
     display: flex;
@@ -65,4 +69,45 @@ position: absolute;
 .headerSearchText{
     color: rgb(146, 141, 141);
     cursor: pointer;
+}
+.date{
+    top: 3rem;
+    position: absolute;
+    z-index: 2;
+}
+.optionText{
+        color: rgb(146, 141, 141);
+
+}
+.optionsItem{
+    width: 13rem;
+    display: flex;
+    justify-content: space-between;
+    margin: 1rem;
+}
+.optionCounters{
+    display: flex;
+    align-items:center ;
+    gap:1rem;
+    font-size:1rem ;
+    color:black;
+}
+.optionCounter{
+    width: 3rem;
+    height: 3rem;
+    border: .1rem solid rgb(34, 34, 104);
+    color:rgb(34, 34, 104);
+    cursor: pointer;
+    background-color: white;
+}
+.optionCounter:disabled{
+    cursor:not-allowed
+}
+.options{
+    position: absolute;
+    top: 3.5rem;
+    background-color: white;
+            color: rgb(146, 141, 141);
+border-radius: .5rem;
+z-index:2;
 }
